# ChangeLog for app-i18n/anthy
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy/ChangeLog,v 1.77 2006/07/12 12:53:50 hattya Exp $

*anthy-7900 (12 Jul 2006)

  12 Jul 2006; Akinori Hattori <hattya@gentoo.org> +anthy-7900.ebuild:
  new upstream release.

  27 May 2006; Bryan Østergaard <kloeri@gentoo.org> anthy-7100b-r1.ebuild:
  Stable on alpha.

  21 May 2006; Simon Stelling <blubb@gentoo.org> anthy-7100b-r1.ebuild:
  stable on amd64

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-anthy-6700b,
  files/digest-anthy-7100b-r1, Manifest:
  Fixing SHA256 digest for real, pass three...

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/anthy-7500b-asneeded.patch, anthy-7500b.ebuild:
  Add patch to build with --as-needed.

*anthy-7500b (22 Apr 2006)

  22 Apr 2006; Akinori Hattori <hattya@gentoo.org> -anthy-7500.ebuild,
  +anthy-7500b.ebuild:
  new upstream release.

  28 Mar 2006; Aron Griffis <agriffis@gentoo.org> anthy-7100b-r1.ebuild:
  Mark 7100b-r1 stable on ia64

  27 Mar 2006; Markus Rothe <corsair@gentoo.org> anthy-7100b-r1.ebuild:
  Stable on ppc64

  22 Mar 2006; Michael Hanselmann <hansmi@gentoo.org> anthy-7100b-r1.ebuild:
  Stable on ppc.

  20 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> anthy-7100b-r1.ebuild:
  Stable on sparc

*anthy-7500 (20 Mar 2006)

  20 Mar 2006; Akinori Hattori <hattya@gentoo.org> +anthy-7500.ebuild:
  new upstream release.

  20 Mar 2006; Akinori Hattori <hattya@gentoo.org> anthy-7100b-r1.ebuild:
  stable on x86.

*anthy-7100b-r1 (18 Dec 2005)

  18 Dec 2005; Akinori Hattori <hattya@gentoo.org> -anthy-7100b.ebuild,
  +anthy-7100b-r1.ebuild:
  fixes a problem of anthy.dic generation.

*anthy-7100b (13 Nov 2005)

  13 Nov 2005; Akinori Hattori <hattya@gentoo.org> +anthy-7100b.ebuild:
  new upstream release.

  23 Sep 2005; MATSUU Takuto <matsuu@gentoo.org> -anthy-5900.ebuild,