@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy/anthy-7500b.ebuild,v 1.2 2006/04/24 11:04:24 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy/anthy-7500b.ebuild,v 1.3 2006/07/12 13:10:08 hattya Exp $
 
 inherit elisp-common eutils autotools libtool
 
@@ -14,10 +14,11 @@ LICENSE="GPL-2"
 KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc-macos ~ppc64 ~sparc ~x86"
 SLOT="0"
 
-DEPEND="emacs? ( virtual/emacs )
-	!app-i18n/anthy-ss"
+DEPEND="!app-i18n/anthy-ss
+	emacs? ( virtual/emacs )"
 
 src_unpack() {
+
 	unpack ${A}
 	cd "${S}"
 
@@ -25,6 +26,7 @@ src_unpack() {
 	eautomake
 
 	elibtoolize
+
 }
 
 src_compile() {
@@ -42,19 +44,19 @@ src_compile() {
 	fi
 
 	econf ${myconf} || die
-	emake || die
+	emake -j1 || die
 
 }
 
 src_install() {
 
-	make DESTDIR=${D} install || die
+	emake DESTDIR="${D}" install || die
 
-	use emacs && elisp-site-file-install ${FILESDIR}/50anthy-gentoo.el
-
-	rm doc/Makefile*
+	use emacs && elisp-site-file-install "${FILESDIR}"/50anthy-gentoo.el
 
 	dodoc AUTHORS DIARY NEWS README ChangeLog
+
+	rm doc/Makefile*
 	dodoc doc/*
 
 }
