@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/anthy
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy/ChangeLog,v 1.77 2006/07/12 12:53:50 hattya Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/anthy/ChangeLog,v 1.78 2006/07/12 13:10:08 hattya Exp $
+
+  12 Jul 2006; Akinori Hattori <hattya@gentoo.org> -anthy-6700b.ebuild,
+  anthy-7100b-r1.ebuild, anthy-7500b.ebuild:
+  use emake for install
 
 *anthy-7900 (12 Jul 2006)
 
